--- a/data/Events.yml
+++ b/data/Events.yml
@@ -1,28 +1,44 @@
-Item:
+Collabs:
   -
-    Title: "Using on/offline participatory methods to creatively re:imagine the future"
-    EventTitle: "Artist Talk: Emergent Digital Practices @DU"
-    EventVenue: Hall Denver University
+    Title: "NYC District 1 Candidate Forum"
+    EventTitle: "Hosted by the Coalition to Protect Chinatown and the Lower East Side"
+    EventVenue: Design High School
+    EventLocation: NYC
+    EventDate: 25 September 2017
+  -
+    Title: "BetaNYC (Event Organizers)"
+    EventTitle: "Process for People’s Roadmap listening session - BKLYN Editione"
+    EventVenue: Hosted by Carto
+    EventLocation: Brooklyn, NY
+    Role: Facilitation co-hosted by Composites Collective
+    EventDate: 19 October 2017
+
+
+Talks:
+  -
+    Title: "Creatively Re:imagining our Futures using On/Fffline Models and Tools"
+    EventTitle: "Artist Talk: Emergent Digital Practices @ Denver University"
+    EventVenue: Shwayder Art Building
     EventLocation: Denver, CO
-    EventDate: 08 August 2017
+    EventDate: 12 October 2017
   -
-    Title: "Cyber Democracy: Inventing the Future of Local Government"
-    EventTitle: "WeWork Research Team Lunches"
+    Title: "Deliberative Democracy to Re:imageine NYC Housing"
+    EventTitle: "WeWork Research"
     EventVenue: WeWork Chelsea
-    EventLocation: New York, NY
-    EventDate: 26 July 2017
+    EventLocation: NYC
+    EventDate: 29 September 2018
   -
-    Title: "Cyber Democracy: Inventing the NYC"
+    Title: "Re-Inventing the Future of NYC Local Government"
     EventTitle: "TicTec@Taipei Unconference"
     EventVenue: Taipei Conference Center
     EventLocation: Taiwan
-    EventDate: 20 July 2017
+    EventDate: 12 September 2017
   -
     Title: "Cyber Democracy: Inventing the Future of Local Government"
     EventTitle: "Reboot: Citizen Engagement"
     EventVenue: Civic Hall
     EventLocation: NYC
-    EventDate: 08 August 2017
+    EventDate: 9 August 2017
   -
     Title: "Cyber Democracy: Inventing the Future of Local Government"
     EventTitle: "BetaNYC Leadership Meeting"
@@ -41,6 +57,6 @@ Item:
     EventTitle: "Eyeo"
     EventVenue: Walker Art Center
     EventLocation: Minneapolis, MN
-    EventDate: 26 July 2017
+    EventDate: 26 June 2017
     Video: https://www.preentation.com/download.pdf
 
