cleanup event data

--- a/data/Events.yml
+++ b/data/Events.yml
@@ -1,22 +1,21 @@
 Collabs:
   -
+    Title: "Process for People’s Roadmap listening session - BKLYN Edition"
+    EventTitle: "BetaNYC facilitaiton co-hosted by Composites Collective"
+    EventVenue: Hosted by Carto
+    EventLocation: Brooklyn, NY
+    EventDate: 19 October 2017
+  -
     Title: "NYC District 1 Candidate Forum"
     EventTitle: "Hosted by the Coalition to Protect Chinatown and the Lower East Side"
     EventVenue: Design High School
     EventLocation: NYC
     EventDate: 25 September 2017
-  -
-    Title: "BetaNYC (Event Organizers)"
-    EventTitle: "Process for People’s Roadmap listening session - BKLYN Editione"
-    EventVenue: Hosted by Carto
-    EventLocation: Brooklyn, NY
-    Role: Facilitation co-hosted by Composites Collective
-    EventDate: 19 October 2017
 
 
 Talks:
   -
-    Title: "Creatively Re:imagining our Futures using On/Fffline Models and Tools"
+    Title: "Creatively Re:imagining our Futures using On/ffline Models and Tools"
     EventTitle: "Artist Talk: Emergent Digital Practices @ Denver University"
     EventVenue: Shwayder Art Building
     EventLocation: Denver, CO
