Project social links

--- a/data/Projects.yml
+++ b/data/Projects.yml
@@ -2,3 +2,8 @@ Talkto:
   MainPhoto: img/talktonyc/talktonyc-homepage-screenshot-sept.png
   SecondaryPhoto: img/talktonyc/talktonyc-youtube-channel-video-content.png
   TertiaryPhoto: img/talktonyc/talktonyc-helps-mary-silver-with-polis.png
+
+  twitter: https://twitter.com/talktonyc
+  instagram: https://instagram.com/talktonyc
+  youtube: https://instagram.com/talktonyc
+  email: hi@talkto.nyc
