--- a/data/Events.yml
+++ b/data/Events.yml
@@ -21,7 +21,7 @@ Talks:
     EventLocation: Denver, CO
     EventDate: 12 October 2017
   -
-    Title: "Deliberative Democracy to Re:imageine NYC Housing"
+    Title: "Deliberative Democracy to Re:imagine NYC Housing"
     EventTitle: "WeWork Research"
     EventVenue: WeWork Chelsea
     EventLocation: NYC
