--- a/data/Events.yml
+++ b/data/Events.yml
@@ -2,7 +2,7 @@ Collabs:
   -
     Title: "Process for People’s Roadmap listening session - BKLYN Edition"
     EventTitle: "BetaNYC facilitaiton co-hosted by Composites Collective"
-    EventVenue: Hosted by Carto
+    EventVenue: Carto
     EventLocation: Brooklyn, NY
     EventDate: 19 October 2017
   -
@@ -21,7 +21,7 @@ Talks:
     EventLocation: Denver, CO
     EventDate: 12 October 2017
   -
-    Title: "Deliberative Democracy to Re:imageine NYC Housing"
+    Title: "Deliberative Democracy to Re:imagine NYC Housing"
     EventTitle: "WeWork Research"
     EventVenue: WeWork Chelsea
     EventLocation: NYC
@@ -29,7 +29,7 @@ Talks:
   -
     Title: "Re-Inventing the Future of NYC Local Government"
     EventTitle: "TicTec@Taipei Unconference"
-    EventVenue: Taipei Conference Center
+    EventVenue: Taipei International Convention Center
     EventLocation: Taiwan
     EventDate: 12 September 2017
   -
